infrastructure/k8s/ingress-service.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata: 
#   name: ingress-service
#   annotations: 
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
# spec:
#   rules:
#       http:
#         paths:
#           - path: /api
#             backend:
#               serviceName: auth-service
#               servicePort: 3000
              
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/users/?(.*)
        backend:
          serviceName: auth-service
          servicePort: 3000
